Task-1/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lanistar-devops-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lanistar-devops-api
      tier: frontend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: lanistar-devops-api
        tier: frontend
    spec:
      containers:
        - name: lanistar-devops-api
          image: 32518/nginx-devops:d1
          securityContext:
            runAsUser: 5000
            runAsNonRoot: true
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
            limits:
              cpu: 550m
      serviceAccount: devops-key
      serviceAccountName: devops-key
---
apiVersion: v1
kind: Service
metadata:
  name: lanistar-devops-api
  labels:
    app: lanistar-devops-api
    tier: frontend
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: lanistar-devops-api
    tier: frontend
