Task-1/devops-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-west-2:267925113789:certificate/0dad6882-062c-4bab-bdf2-c32b57ed36ab
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: "60"
    alb.ingress.kubernetes.io/load-balancer-attributes: access_logs.s3.enabled=true,access_logs.s3.bucket=logs-eks-prod-cluster-app-loadbalancer-eu-west-2
    # alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    # alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    # ingress.kubernetes.io/ssl-redirect: "true"
    alb.ingress.kubernetes.io/scheme: internet-facing
    kubernetes.io/ingress.class: "alb"
spec:
  rules:
  - host: nginx.v2.lanistar.com
    http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: lanistar-devops-api
            port:
              number: 8080
